--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-<meta http-equiv="Content-Type" content="text/html;php_value default_charset off"/>
+<meta http-equiv="Content-Type" content="text/html;AddDefaultCharset off"/>
 
 <title>上海师锐企业管理咨询有限公司|专业验厂咨询|沃尔玛验厂|ICTI认证|BSCI认证</title>
 
