--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 
 <head>
 
-<meta http-equiv="Content-Type" content="text/html;php_value default_charset off"/>
+<meta http-equiv="Content-Type" content="text/html;charset=gbk" />
 
 <title>ио╨ёй╕хЯфСр╣╧эюМвия╞споч╧╚к╬|в╗р╣яИЁ╖вия╞|нж╤ШбЙяИЁ╖|ICTIхож╓|BSCIхож╓</title>
 
@@ -26,7 +26,7 @@ function validate() {
 
   if ($("#kw").val()=="") {
 
-	  alert("гКйДхКдЗр╙кякВ╣д╧ь╪Эвж");
+	  alert("Х╞╥Х╬⌠Е┘╔Ф┌╗Х╕│Ф░°Г╢╒Г └Е┘ЁИ■╝Е╜≈");
 
 	  return false;
 
@@ -44,7 +44,7 @@ function validate() {
 
 <div class="m">
 
-<!--s:рЁм╥-->
+<!--s:И║╣Е╓╢-->
 
     <div class="header clearfix">
 
@@ -54,13 +54,13 @@ function validate() {
 
       <div><span>
 
-<img border=0 src="/style/default/images/home.jpg" align="absmiddle"> <a href="javascript:void(0);" onClick="this.style.behavior='url(#default#homepage)';this.setHomePage('/'); return(false);">иХн╙йврЁ</a> &nbsp; 
+<img border=0 src="/style/default/images/home.jpg" align="absmiddle"> <a href="javascript:void(0);" onClick="this.style.behavior='url(#default#homepage)';this.setHomePage('/'); return(false);">Х╝╬Д╦╨И╕√И║╣</a> &nbsp; 
 
-<img border=0 src="/style/default/images/bookmark.jpg" align="absmiddle"> <a href="javascript:void(0);" onClick="window.external.addFavorite('/','ио╨ёй╕хЯфСр╣╧эюМвия╞споч╧╚к╬'); return(false);">╪схКйу╡ь</a> &nbsp; 
+<img border=0 src="/style/default/images/bookmark.jpg" align="absmiddle"> <a href="javascript:void(0);" onClick="window.external.addFavorite('/','ио╨ёй╕хЯфСр╣╧эюМвия╞споч╧╚к╬'); return(false);">Е┼═Е┘╔Ф■╤Х≈▐</a> &nbsp; 
 
 
 
-<img border=0 src="/style/default/images/mail.jpg" align="absmiddle"> <a href="/us/conact.html">а╙о╣нрцг</a>
+<img border=0 src="/style/default/images/mail.jpg" align="absmiddle"> <a href="/us/conact.html">Х│■ГЁ╩Ф┬▒Д╩╛</a>
 
 
 
@@ -72,7 +72,7 @@ function validate() {
 
     </div>
 
-<!--e:рЁм╥-->
+<!--e:И║╣Е╓╢-->
 
 </div>
 
@@ -80,29 +80,29 @@ function validate() {
 
   
 
-<!-- s:╣╪╨╫ -->
+<!-- s:Е╞╪Х┬╙ -->
 
     <div class="menu">
 
         <ul>
 
-            <li><a class="menumain" href="/">мЬу╬йврЁ</a></li>
+            <li><a class="menumain" href="/">Г╫▒Г╚≥И╕√И║╣</a></li>
 
-            <li><a class="menumain" href="/us/about.html">╧╚к╬╪Р╫И</a></li>
+            <li><a class="menumain" href="/us/about.html">Е┘╛Е▐╦Г╝─Д╩▀</a></li>
 
-            <li><a class="menumain" href="/news/">пбневйя╤</a></li>
+            <li><a class="menumain" href="/news/">Ф√╟И≈╩Х╣└Х╝╞</a></li>
 
-            <li><a class="menumain" href="/cases/">Ёи╧╕╟╦юЩ</a></li>
+            <li><a class="menumain" href="/cases/">Ф┬░Е┼÷Ф║┬Д╬▀</a></li>
 
-            <li><a class="menumain" href="/factory/">©м╩╖яИЁ╖</a></li>
+            <li><a class="menumain" href="/factory/">Е╝╒Ф┬╥И╙▄Е▌┌</a></li>
 
-            <li><a class="menumain" href="/auth/auth_11.html">лЕо╣хож╓вия╞</a></li>  
+            <li><a class="menumain" href="/auth/auth_11.html">Д╫⌠ГЁ╩Х╝╓Х╞│Е▓╗Х╞╒</a></li>  
 
-            <li><a class="menumain" href="/auth/auth_12.html">хож╓╩З╧╧вия╞</a></li>       
+            <li><a class="menumain" href="/auth/auth_12.html">Х╝╓Х╞│Ф°╨Ф·└Е▓╗Х╞╒</a></li>       
 
-            <li><a class="menumain" href="/guestbook/">тзоъаТят</a></li>
+            <li><a class="menumain" href="/guestbook/">Е°╗Г╨©Г∙≥Х╗─</a></li>
 
-            <li><a class="menumain" href="/us/conact.html">а╙о╣нрцг</a></li>
+            <li><a class="menumain" href="/us/conact.html">Х│■ГЁ╩Ф┬▒Д╩╛</a></li>
 
 
 
@@ -110,7 +110,7 @@ function validate() {
 
     </div>
 
-<!-- e:╣╪╨╫ -->
+<!-- e:Е╞╪Х┬╙ -->
 
 </div>
 
